welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (bSmile==true){
    ^monkeyTrouble:7: error: type mismatch;
 found   : Unit
 required: Boolean
    if (bSmile==true){
    ^